2012-12-09  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* column-major-table/interpolated-column.lisp (interpolated-column-schema): New class, derived from foreign-column
	(make-column-schema): Function for creating instances of schemas for interpolated columns
	(init-column-interp): Adapted to new class
	(init-column-interp): Adapted test to new class creation

	* column-major-table/foreign-column.lisp (:numeric-table):
	Refactored interpolated-column into foreign-column.  This will
	enable addition of non-lin-ls-sq-fit-column

	* numeric-table.asd (#:numeric-table): Added
	column-major-table/data-access.lisp to asdf system

2012-12-08  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* init/generic-numeric-table.lisp (make-table): Typo fix.

	* column-major-table/interpolated-column.lisp (foreign-column-schema):
	The acceleration slot is filled with the acceleration object
	(init-column-interp): Modified test to interpolate a parabola.
	(interp-column): Added acceleration argument to call to
	gsll:evaluate

	* README.org: Clarified text.

2012-11-12  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* column-major-table/interpolated-column.lisp
	(foreign-column-schema): Added acceleration slot.
	(init-column-interp): Now testing interpolation of a cubic
	function.  That should give exact results, but it does not

2012-11-10  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* column-major-table/table-queries.lisp (restrict-rows): Modified
	the interface for the WHERE function.  It is now a function of one
	argument, the row index.  The table is stored as a closure.

	* column-major-table/matching-functions.lisp (column-matcher):
	Using vvref instead of nested aref

	* column-major-table/table-queries.lisp (select): Redefined into a
	method

	* init/generic-numeric-table.lisp (select): Made `select' into a
	generic function.

2012-11-09  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* column-major-table/table-queries.lisp (): Added major